[BUGFIX] Navbar inherits wrong font family

--- a/res/css/theme.css
+++ b/res/css/theme.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     text-transform: uppercase;
 }
-p, li {
+p, #content li {
     font-family: 'Lora', serif;
     font-size: 1.2em;
 }
